# polymarket-prediction-agent

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: python-ci.yml  release-artifacts.yml  security.yml
.sisyphus/: ralph-loop.local.md
adapters/: __init__.py  base.py  kalshi.py  market_types.py  polymarket.py  types.py
adapters/polymarket/: __init__.py  _legacy.py  clob_client.py  gamma_client.py  http_client.py  market_catalog.py  market_ws.py  normalize.py  normalizer.py  ws_market.py  ws_sports.py  ws_user.py
adapters/sportsbooks/: __init__.py  base.py  normalizer.py  odds_api.py  sportsgameodds.py
configs/: runtime_policy.preview.json  sports_nba.staging.yaml  sports_nba.yaml  sports_nfl.staging.yaml  sports_nfl.yaml
contracts/: __init__.py  confidence.py  llm_parser.py  mapper.py  mapping.py  mapping_identity.py  mapping_manifest.py  mapping_schema.py  mapping_semantics.py  mapping_validation.py  models.py  ontology.py  resolution_rules.py  rules.py
docs/: ARCHITECTURE.md  BENCHMARK_CASE_SCHEMA.md  BENCHMARK_PROTOCOL.md  BENCHMARK_TOOLKIT.md  FORECASTING_PLATFORM.md  GETTING_STARTED.md  META_FEATURE_SCALABILITY_REFERENCE.md  META_TEAM_MATCH_7_DAY_CRASH_COURSE.md  META_TEAM_MATCH_CALL_NOTES_TEMPLATE.md  META_TEAM_MATCH_GUIDE.md  META_TEAM_MATCH_HM_ONE_PAGER.md  META_TEAM_MATCH_HM_SCRIPT.md  META_TEAM_MATCH_INDEX.md  META_TEAM_MATCH_NOTES.md  META_TEAM_MATCH_OWNERSHIP_CHECK.md  META_TEAM_MATCH_PREP_PACK.md  OPERATOR_RUNBOOK.md  PRODUCTION_READINESS.md  REPLAY_FREEZE_LIFT.md  UPSTREAMS.md  VERIFICATION_SPORTS_POLYMARKET.md  verification_sports_polymarket.json
docs/adr/: authority-and-reconciliation.md
docs/diagrams/: 01-system-context.md  (+9 more)
engine/: __init__.py  accounting.py  alerting.py  cli_output.py  config_loader.py  contract_rules.py  discovery.py  fair_value_loader.py  http_client.py  interfaces.py  model_drift.py  order_state.py  reconciliation.py  runner.py  runtime_bootstrap.py  runtime_metrics.py  runtime_policy.py  safety_state.py  safety_store.py  strategies.py  structured_logging.py
execution/: __init__.py  cancel_replace.py  models.py  planner.py  quote_manager.py
forecasting/: __init__.py  calibration.py  calibrator.py  consensus.py  contracts.py  dashboards.py  fair_value_engine.py  ml_features.py  ml_infer.py  ml_train.py  model_registry.py  models.py  pipeline.py  scoring.py
llm/: __init__.py  advisory_artifact.py  advisory_context.py  evidence_summarizer.py  operator_memo.py
opportunity/: __init__.py  executable_edge.py  fillability.py  models.py  ranker.py
prediction_market_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
research/: __init__.py  analysis.py  baselines.py  benchmark_cli.py  benchmark_reporting.py  benchmark_runner.py  benchmark_suite.py  benchmark_suite_cli.py  blend.py  calibration.py  datasets.py  fair_value_manifest.py  fair_values.py  fair_values_cli.py  indexer.py  manifest_schema.py  manifest_validation.py  paper.py  replay.py  schemas.py  scoring.py  storage.py  train_cli.py
risk/: __init__.py  cleanup.py  correlated_exposure.py  freeze_windows.py  kill_switch.py  limits.py
scripts/: build_current_state_fair_values.py  build_event_map_from_schedule_feed.py  build_fair_values.py  build_inference_dataset.py  build_mappings.py  build_opportunities.py  build_sports_fair_values.py  build_training_dataset.py  config_loader.py  demo_preview.py  demo_replay.py  export_polymarket_markets.py  fetch_the_odds_api_rows.py  ingest_live_data.py  operator_cli.py  refresh_sports_fair_values.py  render_diagrams.py  render_model_vs_market_dashboard.py  run_agent_loop.py  run_alerting_smoke.py  run_continuous_builder_smoke.py  run_current_projection.py  run_heartbeat_smoke.py  run_model_drift_smoke.py  run_multi_provider_sportsbook_smoke.py  run_polymarket_capture.py  run_polymarket_depth_trades_smoke.py  run_replay_attribution.py  run_service_stack_smoke.py  run_sports_benchmark.py  run_sports_benchmark_suite.py  run_sportsbook_capture.py  run_tax_audit_smoke.py  scaffold_forecasting_pipeline.py  summarize_events.py  train_models.py
services/: __init__.py
storage/: __init__.py  current_projection.py  current_read_adapter.py  current_selection.py  current_state.py  current_state_materializers.py  current_state_projectors.py  journal.py  parquet_store.py  raw_store.py  source_health.py
tests/: test_advisory_context.py  test_alerting_contracts.py  test_baselines.py  test_benchmark_cli.py  test_benchmark_runner.py  test_benchmark_suite.py  test_benchmark_suite_cli.py  test_build_event_map_from_schedule_feed.py  test_build_sports_fair_values.py  test_builder_lineage.py  test_calibration.py  test_cancel_replace.py  test_cleanup.py  test_console_script_entrypoints.py  test_contracts_layer.py  test_correlated_exposure.py  test_current_projection.py  test_current_projection_worker.py  test_current_state_projectors.py  test_data_quality_gates.py  test_discovery.py  test_docs_sync.py  test_elo.py  test_engine_runner.py  test_execution_crash_windows.py  test_execution_microstructure_contracts.py  test_execution_planner.py  test_export_polymarket_markets.py  test_fail_closed.py  test_fair_value_loader.py  test_fair_values.py  test_fetch_the_odds_api_rows.py  test_forecasting_dashboards.py  test_forecasting_layers.py  test_freeze_windows.py  test_heartbeat_contracts.py  test_hot_wallet_security_contracts.py  test_http_client.py  test_ingest_live_data.py  test_journal.py  (+52 more)
(+97 files in other folders)
