[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-market-agent"
version = "0.1.0"
description = "Unified Kalshi/Polymarket prediction-market trading agent scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["adapters*", "engine*", "risk*", "research*"]
