[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-market-agent"
version = "0.1.0"
description = "Unified Kalshi/Polymarket prediction-market trading agent scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Pulkit Agarwal" },
  { name = "Harshit Agarwal" },
]
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
research = [
  "pyarrow>=14",
  "duckdb>=0.10",
]
polymarket = [
  "httpx>=0.27",
  "websockets>=12",
  "py-clob-client",
]
kalshi = [
  "pykalshi",
]

[project.urls]
Repository = "https://github.com/harshitagarwal2/polymarket-prediction-agent"
Issues = "https://github.com/harshitagarwal2/polymarket-prediction-agent/issues"

[project.scripts]
run-agent-loop = "scripts.run_agent_loop:main"
operator-cli = "scripts.operator_cli:main"
ingest-live-data = "scripts.ingest_live_data:main"
train-models = "scripts.train_models:main"
build-fair-values = "scripts.build_fair_values:main"
build-sports-fair-values = "scripts.build_sports_fair_values:main"
refresh-sports-fair-values = "scripts.refresh_sports_fair_values:main"
run-sports-benchmark = "scripts.run_sports_benchmark:main"
run-sports-benchmark-suite = "scripts.run_sports_benchmark_suite:main"
prediction-market-sports-benchmark = "scripts.run_sports_benchmark:main"
prediction-market-sports-benchmark-suite = "scripts.run_sports_benchmark_suite:main"
render-model-vs-market-dashboard = "scripts.render_model_vs_market_dashboard:main"
scaffold-forecasting-pipeline = "scripts.scaffold_forecasting_pipeline:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
research = ["fixtures/*.json"]

[tool.setuptools.packages.find]
include = ["adapters*", "contracts*", "engine*", "execution*", "forecasting*", "llm*", "opportunity*", "risk*", "research*", "scripts*", "storage*"]
