[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-market-agent"
version = "0.1.0"
description = "Unified Kalshi/Polymarket prediction-market trading agent scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Pulkit Agarwal" },
  { name = "Harshit Agarwal" },
]
dependencies = [
  "pandas>=2.0",
  "pyarrow>=24.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "coverage[toml]>=7.13.5",
  "mypy>=1.11",
  "pip-audit>=2.7",
  "pre-commit>=3.8",
  "ruff>=0.6.9",
  "setuptools>=68",
  "wheel>=0.43",
]
research = [
  "duckdb>=0.10",
]
postgres = [
  "psycopg[binary]>=3.3.3",
]
polymarket = [
  "httpx>=0.27",
  "websockets>=12",
  "py-clob-client",
]
kalshi = [
  "pykalshi",
]

[project.urls]
Repository = "https://github.com/harshitagarwal2/polymarket-prediction-agent"
Issues = "https://github.com/harshitagarwal2/polymarket-prediction-agent/issues"

[project.scripts]
run-agent-loop = "scripts.run_agent_loop:main"
operator-cli = "scripts.operator_cli:main"
ingest-live-data = "scripts.ingest_live_data:main"
train-models = "scripts.train_models:main"
build-fair-values = "scripts.build_fair_values:main"
build-sports-fair-values = "scripts.build_sports_fair_values:main"
refresh-sports-fair-values = "scripts.refresh_sports_fair_values:main"
run-sports-benchmark = "scripts.run_sports_benchmark:main"
run-sports-benchmark-suite = "scripts.run_sports_benchmark_suite:main"
prediction-market-sports-benchmark = "scripts.run_sports_benchmark:main"
prediction-market-sports-benchmark-suite = "scripts.run_sports_benchmark_suite:main"
render-model-vs-market-dashboard = "scripts.render_model_vs_market_dashboard:main"
scaffold-forecasting-pipeline = "scripts.scaffold_forecasting_pipeline:main"
bootstrap-postgres = "storage.postgres.bootstrap:main"
run-sportsbook-capture = "scripts.run_sportsbook_capture:main"
run-polymarket-capture = "scripts.run_polymarket_capture:main"
run-current-projection = "scripts.run_current_projection:main"
run-replay-attribution = "scripts.run_replay_attribution:main"

[tool.setuptools]
include-package-data = true

[tool.coverage.run]
branch = true
relative_files = true
source = [
  "adapters",
  "contracts",
  "engine",
  "execution",
  "forecasting",
  "llm",
  "opportunity",
  "research",
  "risk",
  "scripts",
  "services",
  "storage",
]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
files = [
  "storage/postgres/bootstrap.py",
  "scripts/ingest_live_data.py",
  "tests/test_console_script_entrypoints.py",
  "tests/test_docs_sync.py",
  "tests/test_repository_hardening.py",
]

[tool.ruff]
target-version = "py310"
extend-exclude = ["runtime", "upstreams", "dist", "build"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.setuptools.package-data]
research = ["fixtures/*.json"]

[tool.setuptools.packages.find]
include = ["adapters*", "contracts*", "engine*", "execution*", "forecasting*", "llm*", "opportunity*", "risk*", "research*", "scripts*", "services*", "storage*"]
